--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, possimus.</p>
 </body>
 </html>
